--- a/index.html
+++ b/index.html
@@ -8,49 +8,50 @@
 </head>
 <body>
   <h1>GRAFICOS</h1>
+  <h2>Montserrat Arancibia</h2>
   <div class="galeria">
-    <div class="imagen"><img src="imagenes/alum pozo lim.png" alt="alum pozo lim"></div>
-    <div class="imagen"><img src="imagenes/aluminio pozo lim.png" alt="aluminio pozo lim"></div>
-    <div class="imagen"><img src="imagenes/arsenico pozo lim.png" alt="arsenico pozo lim"></div>
-    <div class="imagen"><img src="imagenes/bic pozo lim.png" alt="bic pozo lim"></div>
-    <div class="imagen"><img src="imagenes/calcio dis pozo lim.png" alt="calcio dis pozo lim"></div>
-    <div class="imagen"><img src="imagenes/cobre pozo lim.png" alt="cobre pozo lim"></div>
-    <div class="imagen"><img src="imagenes/conduc espe poozo lim.png" alt="conduc espe poozo lim"></div>
-    <div class="imagen"><img src="imagenes/demanda quim O pozo lim.png" alt="demanda quim O pozo lim"></div>
-    <div class="imagen"><img src="imagenes/file_show (1).png" alt="file_show (1)"></div>
-    <div class="imagen"><img src="imagenes/file_show (10).png" alt="file_show (10)"></div>
-    <div class="imagen"><img src="imagenes/file_show (11).png" alt="file_show (11)"></div>
-    <div class="imagen"><img src="imagenes/file_show (12).png" alt="file_show (12)"></div>
-    <div class="imagen"><img src="imagenes/file_show (13).png" alt="file_show (13)"></div>
-    <div class="imagen"><img src="imagenes/file_show (14).png" alt="file_show (14)"></div>
-    <div class="imagen"><img src="imagenes/file_show (15).png" alt="file_show (15)"></div>
-    <div class="imagen"><img src="imagenes/file_show (16).png" alt="file_show (16)"></div>
-    <div class="imagen"><img src="imagenes/file_show (17).png" alt="file_show (17)"></div>
-    <div class="imagen"><img src="imagenes/file_show (18).png" alt="file_show (18)"></div>
-    <div class="imagen"><img src="imagenes/file_show (19).png" alt="file_show (19)"></div>
-    <div class="imagen"><img src="imagenes/file_show (2).png" alt="file_show (2)"></div>
-    <div class="imagen"><img src="imagenes/file_show (20).png" alt="file_show (20)"></div>
-    <div class="imagen"><img src="imagenes/file_show (21).png" alt="file_show (21)"></div>
-    <div class="imagen"><img src="imagenes/file_show (22).png" alt="file_show (22)"></div>
-    <div class="imagen"><img src="imagenes/file_show (23).png" alt="file_show (23)"></div>
-    <div class="imagen"><img src="imagenes/file_show (24).png" alt="file_show (24)"></div>
-    <div class="imagen"><img src="imagenes/file_show (25).png" alt="file_show (25)"></div>
-    <div class="imagen"><img src="imagenes/file_show (26).png" alt="file_show (26)"></div>
-    <div class="imagen"><img src="imagenes/file_show (27).png" alt="file_show (27)"></div>
-    <div class="imagen"><img src="imagenes/file_show (28).png" alt="file_show (28)"></div>
-    <div class="imagen"><img src="imagenes/file_show (29).png" alt="file_show (29)"></div>
-    <div class="imagen"><img src="imagenes/file_show (3).png" alt="file_show (3)"></div>
-    <div class="imagen"><img src="imagenes/file_show (30).png" alt="file_show (30)"></div>
-    <div class="imagen"><img src="imagenes/file_show (31).png" alt="file_show (31)"></div>
-    <div class="imagen"><img src="imagenes/file_show (32).png" alt="file_show (32)"></div>
-    <div class="imagen"><img src="imagenes/file_show (33).png" alt="file_show (33)"></div>
-    <div class="imagen"><img src="imagenes/file_show (4).png" alt="file_show (4)"></div>
-    <div class="imagen"><img src="imagenes/file_show (5).png" alt="file_show (5)"></div>
-    <div class="imagen"><img src="imagenes/file_show (6).png" alt="file_show (6)"></div>
-    <div class="imagen"><img src="imagenes/file_show (7).png" alt="file_show (7)"></div>
-    <div class="imagen"><img src="imagenes/file_show (8).png" alt="file_show (8)"></div>
-    <div class="imagen"><img src="imagenes/file_show (9).png" alt="file_show (9)"></div>
-    <div class="imagen"><img src="imagenes/file_show.png" alt="file_show"></div>
+    <div class="imagen"><img src="alum pozo lim.png" alt="alum pozo lim"></div>
+    <div class="imagen"><img src="aluminio pozo lim.png" alt="aluminio pozo lim"></div>
+    <div class="imagen"><img src="arsenico pozo lim.png" alt="arsenico pozo lim"></div>
+    <div class="imagen"><img src="bic pozo lim.png" alt="bic pozo lim"></div>
+    <div class="imagen"><img src="calcio dis pozo lim.png" alt="calcio dis pozo lim"></div>
+    <div class="imagen"><img src="cobre pozo lim.png" alt="cobre pozo lim"></div>
+    <div class="imagen"><img src="conduc espe poozo lim.png" alt="conduc espe poozo lim"></div>
+    <div class="imagen"><img src="demanda quim O pozo lim.png" alt="demanda quim O pozo lim"></div>
+    <div class="imagen"><img src="file_show (1).png" alt="file_show (1)"></div>
+    <div class="imagen"><img src="file_show (10).png" alt="file_show (10)"></div>
+    <div class="imagen"><img src="file_show (11).png" alt="file_show (11)"></div>
+    <div class="imagen"><img src="file_show (12).png" alt="file_show (12)"></div>
+    <div class="imagen"><img src="file_show (13).png" alt="file_show (13)"></div>
+    <div class="imagen"><img src="file_show (14).png" alt="file_show (14)"></div>
+    <div class="imagen"><img src="file_show (15).png" alt="file_show (15)"></div>
+    <div class="imagen"><img src="file_show (16).png" alt="file_show (16)"></div>
+    <div class="imagen"><img src="file_show (17).png" alt="file_show (17)"></div>
+    <div class="imagen"><img src="file_show (18).png" alt="file_show (18)"></div>
+    <div class="imagen"><img src="file_show (19).png" alt="file_show (19)"></div>
+    <div class="imagen"><img src="file_show (2).png" alt="file_show (2)"></div>
+    <div class="imagen"><img src="file_show (20).png" alt="file_show (20)"></div>
+    <div class="imagen"><img src="file_show (21).png" alt="file_show (21)"></div>
+    <div class="imagen"><img src="file_show (22).png" alt="file_show (22)"></div>
+    <div class="imagen"><img src="file_show (23).png" alt="file_show (23)"></div>
+    <div class="imagen"><img src="file_show (24).png" alt="file_show (24)"></div>
+    <div class="imagen"><img src="file_show (25).png" alt="file_show (25)"></div>
+    <div class="imagen"><img src="file_show (26).png" alt="file_show (26)"></div>
+    <div class="imagen"><img src="file_show (27).png" alt="file_show (27)"></div>
+    <div class="imagen"><img src="file_show (28).png" alt="file_show (28)"></div>
+    <div class="imagen"><img src="file_show (29).png" alt="file_show (29)"></div>
+    <div class="imagen"><img src="file_show (3).png" alt="file_show (3)"></div>
+    <div class="imagen"><img src="file_show (30).png" alt="file_show (30)"></div>
+    <div class="imagen"><img src="file_show (31).png" alt="file_show (31)"></div>
+    <div class="imagen"><img src="file_show (32).png" alt="file_show (32)"></div>
+    <div class="imagen"><img src="file_show (33).png" alt="file_show (33)"></div>
+    <div class="imagen"><img src="file_show (4).png" alt="file_show (4)"></div>
+    <div class="imagen"><img src="file_show (5).png" alt="file_show (5)"></div>
+    <div class="imagen"><img src="file_show (6).png" alt="file_show (6)"></div>
+    <div class="imagen"><img src="file_show (7).png" alt="file_show (7)"></div>
+    <div class="imagen"><img src="file_show (8).png" alt="file_show (8)"></div>
+    <div class="imagen"><img src="file_show (9).png" alt="file_show (9)"></div>
+    <div class="imagen"><img src="file_show.png" alt="file_show"></div>
   </div>
 </body>
 </html>
